# simple_opencl_example

./: CMakeLists.txt  README.md  kernel.cl  main.cpp  utils.h
